Bug #9406
closedbigdecimal 1.2.4 install fail because missing ruby/util.h macro
Description
2.0.0 ruby/util.h is missing this trunk macro
http://paste.ubuntu.com/6748376/
which causes this failure
http://paste.ubuntu.com/6747904/
Manually patching util.h with the trunk macro fixes gem install fail
Updated by jonforums (Jon Forums) about 12 years ago
With no patch to util.h, bigdecimal 1.2.4 installs ok on 64bit linux in both 2.0.0 and 2.1.1
jon@ubusvr64:~$ uru gem up bigdecimal
ruby 2.0.0p384 (2014-01-12 revision 44576) [x86_64-linux]
Updating installed gems
Updating bigdecimal
Fetching: bigdecimal-1.2.4.gem (100%)
Building native extensions. This could take a while...
Successfully installed bigdecimal-1.2.4
Gems updated: bigdecimal
ruby 2.1.1p5 (2014-01-11 revision 44557) [x86_64-linux]
Updating installed gems
Updating bigdecimal
Fetching: bigdecimal-1.2.4.gem (100%)
Building native extensions. This could take a while...
Successfully installed bigdecimal-1.2.4
Gems updated: bigdecimal
jon@ubusvr64:~$ uru gem li bigdecimal
ruby 2.0.0p384 (2014-01-12 revision 44576) [x86_64-linux]
*** LOCAL GEMS ***
bigdecimal (1.2.4, 1.2.3, 1.2.0)
ruby 2.1.1p5 (2014-01-11 revision 44557) [x86_64-linux]
*** LOCAL GEMS ***
bigdecimal (1.2.4, 1.2.3)
Updated by nobu (Nobuyoshi Nakada) about 12 years ago
- Has duplicate Bug #9412: bigdecimal 1.2.4 fail to compile on windows added
Updated by nobu (Nobuyoshi Nakada) about 12 years ago
- Tracker changed from Backport to Bug
- Project changed from 15 to Ruby
- Category set to ext
- Status changed from Open to Closed
- Assignee changed from nagachika (Tomoyuki Chikanaga) to mrkn (Kenta Murata)
Added macros for backword compatibilities at r44593 and r44594.
Next release of bigdecimal gem will fix this.
Updated by nobu (Nobuyoshi Nakada) about 12 years ago
- ruby -v changed from ruby 2.0.0p384 (2014-01-12 revision 44576) [i386-mingw32] to -
Issue #9406 has been updated by Nobuyoshi Nakada.
Tracker changed from Backport to Bug
Project changed from Backport200 to ruby-trunk
Category set to ext
Status changed from Open to Closed
Assignee changed from Tomoyuki Chikanaga to Kenta Murata
Added macros for backword compatibilities at r44593 and r44594.
Next release of bigdecimal gem will fix this.
Bug #9406: bigdecimal 1.2.4 install fail because missing ruby/util.h macro
https://bugs.ruby-lang.org/issues/9406#change-44316
- Author: Jon Forums
- Status: Closed
- Priority: Normal
- Assignee: Kenta Murata
- Category: ext
- Target version:
- ruby -v: ruby 2.0.0p384 (2014-01-12 revision 44576) [i386-mingw32]
- Backport:
2.0.0 ruby/util.h is missing this trunk macro
http://paste.ubuntu.com/6748376/
which causes this failure
http://paste.ubuntu.com/6747904/
Manually patching util.h with the trunk macro fixes gem install fail
Updated by mrkn (Kenta Murata) about 12 years ago
I've released bigdecimal 1.2.5.
Updated by mrkn (Kenta Murata) about 12 years ago
Issue #9406 has been updated by Kenta Murata.
I've released bigdecimal 1.2.5.
Bug #9406: bigdecimal 1.2.4 install fail because missing ruby/util.h macro
https://bugs.ruby-lang.org/issues/9406#change-44346
- Author: Jon Forums
- Status: Closed
- Priority: Normal
- Assignee: Kenta Murata
- Category: ext
- Target version:
- ruby -v: -
- Backport:
2.0.0 ruby/util.h is missing this trunk macro
http://paste.ubuntu.com/6748376/
which causes this failure
http://paste.ubuntu.com/6747904/
Manually patching util.h with the trunk macro fixes gem install fail
Updated by nobu (Nobuyoshi Nakada) about 12 years ago
- Has duplicate Bug #9407: bigdecimal 1.2.4 install fail because missing ruby/util.h macro added